# master-degree-thesis

./: README.md
InternshipSRC/BBBox/: #MainWindow.cpp#  AABBox.hpp  CMakeLists.txt  ImageArea.cpp  ImageArea.hpp  MainWindow.cpp  MainWindow.hpp  README.txt  main.cpp
InternshipSRC/FaceDetection/: AnnotatedFrame.hpp  BBoxFileReader.hpp  CMakeLists.txt  README.txt  facedetect.cpp
InternshipSRC/GaussianMap/: BBoxFileReader.cpp  CMakeLists.txt  GaussianMap.cpp  GaussianMap.hpp  README.txt  main.cpp  run_script.sh
InternshipSRC/Nov.Tasks/: BBoxFileReader.cpp  CMakeLists.txt  Methods.cpp  Methods.hpp  README.txt  VisualizeChart.ods  run_task1.sh  run_task2.sh  run_task3.sh  task1.cpp  task2.cpp  task3.cpp
InternshipSRC/Tracking/: AnnotatedFrame.cpp  AnnotatedFrame.hpp  CMakeLists.txt  README.txt  camshiftdemo.cpp  camshiftdemo2.cpp  camshiftdemo3.cpp  camshiftdemo4.cpp
